gtk+3.0 (3.21.4-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 18 Jul 2016 19:11:22 +0200

gtk+3.0 (3.20.6-2) unstable; urgency=medium

  * Team upload

  [ Laurent Bigonville ]
  * Drop patches/015_default-fallback-icon-theme.patch: The default icon theme
    is already defined as Adwaita, not need to also define the fallback theme.

  [ Simon McVittie ]
  * d/rules: reset XDG_CONFIG_HOME, XDG_CACHE_HOME, XDG_DATA_HOME so that
    they are based on the temporary HOME
  * Backport patch from upstream to mark tiled Mutter/Shell windows
    as GDK_WINDOW_STATE_TILED under Wayland (with mutter >= 3.20.2-2)
  * Add my patch from upstream bug 755947 to disable character-cell-based
    size contraints for TILED windows, so that gnome-terminal can snap to
    half the screen under Wayland

 -- Simon McVittie <smcv@debian.org>  Sat, 25 Jun 2016 00:19:51 +0100

gtk+3.0 (3.20.6-1) unstable; urgency=medium

  * New upstream release.
  * Drop revert-scrolledwindow-Remove-child-before-destroying.patch, merged
    upstream.
  * Re-enable test-suite.

 -- Michael Biebl <biebl@debian.org>  Tue, 31 May 2016 21:33:34 +0200

gtk+3.0 (3.20.5-4) unstable; urgency=medium

  * Work around a bug in cdbs which causes the package to FTBFS; see #825135
    for further details.

 -- Michael Biebl <biebl@debian.org>  Thu, 26 May 2016 08:08:16 +0200

gtk+3.0 (3.20.5-3) unstable; urgency=medium

  * Make it simpler to bootstrap the package by marking the build dependencies
    which are required to run the test-suite with <!nocheck>.
    (Closes: #747392)
  * Bump Build-Depends on debhelper to (>= 9.20141010) and dpkg-dev to
    (>= 1.17.14) for build dependency restrictions support.
  * Temporarily disable the test suite (and its build-dependencies) to allow
    building the new gtk-update-icon-cache package. Our buildds don't support
    build profiles yet, so we'll have to bootstrap manually for now.
