@@ -9,14 +9,13 @@ Build-Depends: debhelper (>= 9.20141010),
                dpkg-dev (>= 1.17.14),
                gtk-doc-tools (>= 1.20),
                dh-autoreconf,
-               gettext,
                pkg-config,
                autotools-dev,
                dbus-x11 <!nocheck>,
                gsettings-desktop-schemas <!nocheck>,
                adwaita-icon-theme <!nocheck>,
                at-spi2-core <!nocheck>,
-               libglib2.0-dev (>= 2.45.8),
+               libglib2.0-dev (>= 2.49.3),
                libgdk-pixbuf2.0-dev (>= 2.30.0),
                libpango1.0-dev (>= 1.37.3),
                libatk1.0-dev (>= 2.15.1),
@@ -25,7 +24,7 @@ Build-Depends: debhelper (>= 9.20141010),
                libepoxy-dev,
                libharfbuzz-dev (>= 0.9),
                libwayland-dev (>= 1.9.91) [linux-any],
-               wayland-protocols (>= 1.1) [linux-any],
+               wayland-protocols (>= 1.3) [linux-any],
                libxkbcommon-dev (>= 0.2.0),
                libx11-dev (>= 2:1.3.3-2),
                libxext-dev (>= 2:1.1.1-3),
@@ -48,7 +47,8 @@ Build-Depends: debhelper (>= 9.20141010),
                libjson-glib-dev,
                gobject-introspection (>= 1.41.3),
                libgirepository1.0-dev (>= 1.39.0),
-               xvfb <!nocheck>
+               xauth <!nocheck>,
+               xvfb <!nocheck>,
 Build-Depends-Indep: docbook-xml,
                      docbook-utils,
                      libglib2.0-doc,
@@ -144,7 +144,7 @@ Depends: @SHARED_PKG@ (= ${binary:Version}),
          @COMMON_PKG@,
          ${misc:Depends},
          ${shlibs:Depends},
-         libglib2.0-dev (>= 2.43.4),
+         libglib2.0-dev (>= 2.49.3),
          libgdk-pixbuf2.0-dev (>= 2.30.0),
          libpango1.0-dev (>= 1.37.3),
          libatk1.0-dev (>= 2.15.1),
