@@ -1,6 +1,10 @@
 gtk+3.0 (3.21.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/control.in:
+    + Build depend on xauth, needed for xvfb-run.
+    + Drop build-dependency on gettext and update the version requirements
+      for wayland-protocols and glib.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 18 Jul 2016 19:11:22 +0200
 
